MA: testing vscommit functionality

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <a href="viewone.html">
-    <button type="button" class="btn btn-link" >View one record</button>
+    <button type="button1" class="btn btn-link" >View one record</button>
 </a>
 
 <a href="viewall.html">
